--- a/index.html
+++ b/index.html
@@ -108,6 +108,53 @@
             </div>
 
         </div>
+        <div class="header-mobile">
+            <div class="header-top">
+                <div class="burger-menu">
+                    <input type="checkbox" id="menu-toggle" />
+                    <label id="trigger" for="menu-toggle"></label>
+                    <label id="burger" for="menu-toggle"></label>
+                    <ul id="menu">
+                        <li class="menu-item"><a href="about.html">О нас</a></li>
+                        <li class="menu-item"><a href="about.html">Бани на заказ</a></li>
+                        <li class="menu-item"><a href="partner.html">Партнерам</a></li>
+                        <li class="menu-item"><a href="contacts.html">Контакты</a></li>
+                    </ul>
+                </div>
+                <div class="header__social">
+                    <a href="#"><img src="assets/images/icons/mob-soc1.svg" alt=""></a>
+                    <a href="#"><img src="assets/images/icons/mob-soc2.svg" alt=""></a>
+                    <a href="#"><img src="assets/images/icons/mob-soc3.svg" alt=""></a>
+                </div>
+                <div class="trash">
+                    <a href="#">
+                        <img src="assets/images/icons/mob-trash.svg" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="container">
+                <div class="header-center">
+                    <div class="center-logo">
+                        <img src="assets/images/logo.svg" alt="">
+                    </div>
+                    <div class="center-menu">
+                        <div class="center-menu__catalog">
+                            <a href="catalog.html">Каталог</a>
+                        </div>
+                        <div class="center-menu__calc">
+                            <a href="catalog.html">Каталог</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="header-bottom">
+                    <div class="search">
+                        <input type="text" class="serch" placeholder="Введите поисковый запрос">
+                        <a href="#"><img src="assets/images/header__search.svg" alt=""></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </header>
 
     <section class="wrapper">
@@ -943,6 +990,71 @@
                             <img src="assets/images/header__social_tg.svg" alt="">
                         </a>
                     </div>
+                </div>
+                <div class="footer-mob-content">
+                    <div class="footer-mob-section">
+                        <div class="footer-mob__accordion">
+                            <button class="accordion section-header">Покупателям</button>
+                            <div class="panel">
+                                <div class="footer__section ">
+                                    <a class="section-link" href="#">Акции</a>
+                                    <a class="section-link" href="#">Скидки</a>
+                                    <a class="section-link" href="#">Возврат товара</a>
+                                    <a class="section-link" href="#">Способы оплаты</a>
+                                    <a class="section-link" href="#">Для юридических лиц</a>
+                                    <a class="section-link" href="#">Зарегестрировать карту</a>
+                                    <a class="section-link" href="#">Подарочные сертификаты</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer-mob-section">
+                        <div class="footer-mob__accordion">
+                            <button class="accordion section-header">Услуги</button>
+                            <div class="panel">
+                                <div class="footer__section ">
+                                    <a class="section-link" href="#">Доставка и подъем</a>
+                                    <a class="section-link" href="#">Самовывоз</a>
+                                    <a class="section-link" href="#">Распил</a>
+                                    <a class="section-link" href="#">Прокат инструмента</a>
+                                    <a class="section-link" href="#">Расчет материалов</a>
+                                    <a class="section-link" href="#">Установка дверей</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer-section t-transform ">
+                        <h3 class="section-header">
+                            НАШ АДРЕС
+                        </h3>
+                        <a class="section-link" href="#">г. Москва, ул. Стародубова 19</a>
+                        <h3 class="section-header t-transform">
+                            Время работы
+                        </h3>
+                        <p>Пн-пт 09:00-18:00</p>
+                        <h3 class="section-header t-transform">
+                            CЛУЖБА ПОДДЕРЖКИ
+                        </h3>
+                        <a class="section-link" href="mailto:service.drevoteka@.ru">service.drevoteka@.ru</a>
+                        <div class="footer-social">
+                            <a href="#">
+                                <img src="assets/images/header__social_wa.svg" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="assets/images/header__social_vk.svg" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="assets/images/header__social_tg.svg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="footer-copyright">
+                <hr>
+                <div class="copyright-text">
+                    © 2004–2021 РосЛесСнаб
                 </div>
             </div>
         </div>
