--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <div class="swiper-slide">
                         <div class="item__card">
                             <div class="card-img">
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <img src="assets/images/card-img.jpg" alt="">
                                 </a>
                             </div>
@@ -267,7 +267,7 @@
                                 <img src="assets/images/icons/card-star.svg" alt="">
                                 <img src="assets/images/icons/card-star-gr.svg" alt="">
                             </div>
-                            <a href="iitem-card.html">
+                            <a href="item-card.html">
                                 <h3 class="card__item-name">
                                     Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                 </h3>
@@ -293,7 +293,7 @@
                     <div class="swiper-slide">
                         <div class="item__card">
                             <div class="card-img">
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <img src="assets/images/card-img.jpg" alt="">
                                 </a>
                             </div>
@@ -304,7 +304,7 @@
                                 <img src="assets/images/icons/card-star.svg" alt="">
                                 <img src="assets/images/icons/card-star-gr.svg" alt="">
                             </div>
-                            <a href="iitem-card.html">
+                            <a href="item-card.html">
                                 <h3 class="card__item-name">
                                     Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                 </h3>
@@ -330,7 +330,7 @@
                     <div class="swiper-slide">
                         <div class="item__card">
                             <div class="card-img">
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <img src="assets/images/card-img.jpg" alt="">
                                 </a>
                             </div>
@@ -341,7 +341,7 @@
                                 <img src="assets/images/icons/card-star.svg" alt="">
                                 <img src="assets/images/icons/card-star-gr.svg" alt="">
                             </div>
-                            <a href="iitem-card.html">
+                            <a href="item-card.html">
                                 <h3 class="card__item-name">
                                     Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                 </h3>
@@ -367,7 +367,7 @@
                     <div class="swiper-slide">
                         <div class="item__card">
                             <div class="card-img">
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <img src="assets/images/card-img.jpg" alt="">
                                 </a>
                             </div>
@@ -378,7 +378,7 @@
                                 <img src="assets/images/icons/card-star.svg" alt="">
                                 <img src="assets/images/icons/card-star-gr.svg" alt="">
                             </div>
-                            <a href="iitem-card.html">
+                            <a href="item-card.html">
                                 <h3 class="card__item-name">
                                     Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                 </h3>
@@ -404,7 +404,7 @@
                     <div class="swiper-slide">
                         <div class="item__card">
                             <div class="card-img">
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <img src="assets/images/card-img.jpg" alt="">
                                 </a>
                             </div>
@@ -415,7 +415,7 @@
                                 <img src="assets/images/icons/card-star.svg" alt="">
                                 <img src="assets/images/icons/card-star-gr.svg" alt="">
                             </div>
-                            <a href="iitem-card.html">
+                            <a href="item-card.html">
                                 <h3 class="card__item-name">
                                     Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                 </h3>
@@ -441,7 +441,7 @@
                     <div class="swiper-slide">
                         <div class="item__card">
                             <div class="card-img">
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <img src="assets/images/card-img.jpg" alt="">
                                 </a>
                             </div>
@@ -452,7 +452,7 @@
                                 <img src="assets/images/icons/card-star.svg" alt="">
                                 <img src="assets/images/icons/card-star-gr.svg" alt="">
                             </div>
-                            <a href="iitem-card.html">
+                            <a href="item-card.html">
                                 <h3 class="card__item-name">
                                     Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                 </h3>
@@ -496,7 +496,7 @@
                     <div class="col-12 col-md-4 col-lg-3">
                         <div class="item__card">
                             <div class="card-img">
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <img src="assets/images/card-img.jpg" alt="">
                                 </a>
                             </div>
@@ -507,7 +507,7 @@
                                 <img src="assets/images/icons/card-star.svg" alt="">
                                 <img src="assets/images/icons/card-star-gr.svg" alt="">
                             </div>
-                            <a href="iitem-card.html">
+                            <a href="item-card.html">
                                 <h3 class="card__item-name">
                                     Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                 </h3>
@@ -533,7 +533,7 @@
                     <div class="col-12 col-md-4 col-lg-3">
                         <div class="item__card">
                             <div class="card-img">
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <img src="assets/images/card-img.jpg" alt="">
                                 </a>
                             </div>
@@ -544,7 +544,7 @@
                                 <img src="assets/images/icons/card-star.svg" alt="">
                                 <img src="assets/images/icons/card-star-gr.svg" alt="">
                             </div>
-                            <a href="iitem-card.html">
+                            <a href="item-card.html">
                                 <h3 class="card__item-name">
                                     Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                 </h3>
@@ -570,7 +570,7 @@
                     <div class="col-12 col-md-4 col-lg-3">
                         <div class="item__card">
                             <div class="card-img">
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <img src="assets/images/card-img.jpg" alt="">
                                 </a>
                             </div>
@@ -581,7 +581,7 @@
                                 <img src="assets/images/icons/card-star.svg" alt="">
                                 <img src="assets/images/icons/card-star-gr.svg" alt="">
                             </div>
-                            <a href="iitem-card.html">
+                            <a href="item-card.html">
                                 <h3 class="card__item-name">
                                     Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                 </h3>
@@ -607,7 +607,7 @@
                     <div class="col-12 col-md-4 col-lg-3">
                         <div class="item__card">
                             <div class="card-img">
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <img src="assets/images/card-img.jpg" alt="">
                                 </a>
                             </div>
@@ -618,7 +618,7 @@
                                 <img src="assets/images/icons/card-star.svg" alt="">
                                 <img src="assets/images/icons/card-star-gr.svg" alt="">
                             </div>
-                            <a href="iitem-card.html">
+                            <a href="item-card.html">
                                 <h3 class="card__item-name">
                                     Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                 </h3>
@@ -644,7 +644,7 @@
                     <div class="col-12 col-md-4 col-lg-3">
                         <div class="item__card">
                             <div class="card-img">
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <img src="assets/images/card-img.jpg" alt="">
                                 </a>
                             </div>
@@ -655,7 +655,7 @@
                                 <img src="assets/images/icons/card-star.svg" alt="">
                                 <img src="assets/images/icons/card-star-gr.svg" alt="">
                             </div>
-                            <a href="iitem-card.html">
+                            <a href="item-card.html">
                                 <h3 class="card__item-name">
                                     Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                 </h3>
@@ -681,7 +681,7 @@
                     <div class="col-12 col-md-4 col-lg-3">
                         <div class="item__card">
                             <div class="card-img">
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <img src="assets/images/card-img.jpg" alt="">
                                 </a>
                             </div>
@@ -692,7 +692,7 @@
                                 <img src="assets/images/icons/card-star.svg" alt="">
                                 <img src="assets/images/icons/card-star-gr.svg" alt="">
                             </div>
-                            <a href="iitem-card.html">
+                            <a href="item-card.html">
                                 <h3 class="card__item-name">
                                     Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                 </h3>
@@ -718,7 +718,7 @@
                     <div class="col-12 col-md-4 col-lg-3">
                         <div class="item__card">
                             <div class="card-img">
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <img src="assets/images/card-img.jpg" alt="">
                                 </a>
                             </div>
@@ -729,7 +729,7 @@
                                 <img src="assets/images/icons/card-star.svg" alt="">
                                 <img src="assets/images/icons/card-star-gr.svg" alt="">
                             </div>
-                            <a href="iitem-card.html">
+                            <a href="item-card.html">
                                 <h3 class="card__item-name">
                                     Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                 </h3>
@@ -755,7 +755,7 @@
                     <div class="col-12 col-md-4 col-lg-3">
                         <div class="item__card">
                             <div class="card-img">
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <img src="assets/images/card-img.jpg" alt="">
                                 </a>
                             </div>
@@ -766,7 +766,7 @@
                                 <img src="assets/images/icons/card-star.svg" alt="">
                                 <img src="assets/images/icons/card-star-gr.svg" alt="">
                             </div>
-                            <a href="iitem-card.html">
+                            <a href="item-card.html">
                                 <h3 class="card__item-name">
                                     Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                 </h3>
@@ -797,7 +797,7 @@
                         <div class="swiper-slide">
                             <div class="item__card">
                                 <div class="card-img">
-                                    <a href="iitem-card.html">
+                                    <a href="item-card.html">
                                         <img src="assets/images/card-img.jpg" alt="">
                                     </a>
                                 </div>
@@ -808,7 +808,7 @@
                                     <img src="assets/images/icons/card-star.svg" alt="">
                                     <img src="assets/images/icons/card-star-gr.svg" alt="">
                                 </div>
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <h3 class="card__item-name">
                                         Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                     </h3>
@@ -834,7 +834,7 @@
                         <div class="swiper-slide">
                             <div class="item__card">
                                 <div class="card-img">
-                                    <a href="iitem-card.html">
+                                    <a href="item-card.html">
                                         <img src="assets/images/card-img.jpg" alt="">
                                     </a>
                                 </div>
@@ -845,7 +845,7 @@
                                     <img src="assets/images/icons/card-star.svg" alt="">
                                     <img src="assets/images/icons/card-star-gr.svg" alt="">
                                 </div>
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <h3 class="card__item-name">
                                         Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                     </h3>
@@ -871,7 +871,7 @@
                         <div class="swiper-slide">
                             <div class="item__card">
                                 <div class="card-img">
-                                    <a href="iitem-card.html">
+                                    <a href="item-card.html">
                                         <img src="assets/images/card-img.jpg" alt="">
                                     </a>
                                 </div>
@@ -882,7 +882,7 @@
                                     <img src="assets/images/icons/card-star.svg" alt="">
                                     <img src="assets/images/icons/card-star-gr.svg" alt="">
                                 </div>
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <h3 class="card__item-name">
                                         Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                     </h3>
@@ -908,7 +908,7 @@
                         <div class="swiper-slide">
                             <div class="item__card">
                                 <div class="card-img">
-                                    <a href="iitem-card.html">
+                                    <a href="item-card.html">
                                         <img src="assets/images/card-img.jpg" alt="">
                                     </a>
                                 </div>
@@ -919,7 +919,7 @@
                                     <img src="assets/images/icons/card-star.svg" alt="">
                                     <img src="assets/images/icons/card-star-gr.svg" alt="">
                                 </div>
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <h3 class="card__item-name">
                                         Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                     </h3>
@@ -945,7 +945,7 @@
                         <div class="swiper-slide">
                             <div class="item__card">
                                 <div class="card-img">
-                                    <a href="iitem-card.html">
+                                    <a href="item-card.html">
                                         <img src="assets/images/card-img.jpg" alt="">
                                     </a>
                                 </div>
@@ -956,7 +956,7 @@
                                     <img src="assets/images/icons/card-star.svg" alt="">
                                     <img src="assets/images/icons/card-star-gr.svg" alt="">
                                 </div>
-                                <a href="iitem-card.html">
+                                <a href="item-card.html">
                                     <h3 class="card__item-name">
                                         Фанера ФК 3 мм 1525х1525, сорт 4/4, нешлифованная, берёза
                                     </h3>
